[gd_scene load_steps=2 format=3 uid="uid://dqmfeixmvwshn"]

[ext_resource type="Script" path="res://scenes/components/AggroComponent.gd" id="1_atlst"]

[node name="AggroComponent" type="Area2D"]
script = ExtResource("1_atlst")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
